使用babel处理高级ES语法(版本问题下次没有成功)

--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -8,8 +8,14 @@
     <!--<script src="./main.js"></script>-->
     <!--通过webpack一个前端工具，把main.js做了一下处理，生成了一个bundle.js文件-->
 <!--    <script src="/bundle.js"></script>-->
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
+    <div class="alert alert-success">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <strong>Title!</strong> Alert body ...
+    </div>
+    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
     <ul>
         <li>这是第1个li</li>
         <li>这是第2个li</li>
@@ -23,7 +29,6 @@
         <li>这是第10个li</li>
     </ul>
     <div  class="box"></div>
-
-    <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 </body>
 </html>
